--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@tosspayments/payment-widget-sdk": "^0.10.2",
     "axios": "^1.6.3",
     "http-proxy-middleware": "^2.0.6",
+    "js-cookie": "^3.0.5",
     "querystring": "^0.2.1",
     "react": "^17.0.0 || ^18.0.0",
+    "react-cookie": "^7.1.0",
     "react-dom": "^17.0.0 || ^18.0.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.21.1",
