--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@tosspayments/payment-widget-sdk": "^0.10.2",
+    "ag-grid-react": "^31.2.1",
     "axios": "^1.6.3",
     "http-proxy-middleware": "^2.0.6",
     "js-cookie": "^3.0.5",
