--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@tosspayments/payment-widget-sdk": "^0.10.2",
-    "ag-grid-react": "^31.2.1",
+    "ag-grid-react": "^31.3.1",
     "axios": "^1.6.3",
+    "dom-to-image": "^2.6.0",
     "http-proxy-middleware": "^2.0.6",
     "js-cookie": "^3.0.5",
+    "jspdf": "^2.5.1",
     "querystring": "^0.2.1",
     "react": "^17.0.0 || ^18.0.0",
     "react-cookie": "^7.1.0",
@@ -27,7 +29,6 @@
     "react-scripts": "5.0.1",
     "recoil": "^0.7.7",
     "recoil-persist": "^5.1.0",
-    "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
